trunk/Archive2/5e/56275859c6dd8e/output
main.cpp: In function 'int main()':
main.cpp:15:16: error: invalid conversion from 'unsigned int' to 'int*' [-fpermissive]
     int *ptr = 0xFFFFFFFF;
                ^
main.cpp: At global scope:
main.cpp:10:12: warning: 'a' defined but not used [-Wunused-variable]
 static int a = 1666;
            ^
